--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "react-table-demo",
   "version": "0.1.0",
-  "homepage": "https://utkarshpathrabe.github.io/React-Table-Demo/",
+  "homepage": "https://utkarshpathrabe.github.io/React-Table-Demo",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^2.28.0",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
@@ -40,8 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^3.2.3"
   }
 }
